--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-signin-client_id" content="460094986334-isi4pb2bokq5adebc9obp1nqp3nn4bm1.apps.googleusercontent.com">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -28,6 +29,9 @@
 
             <!-- Actual Content -->
             <div id="content">
+                <login id="loginPage"></login>
+                <register id="registerPage"></register>
+
                 <div id="index" class="container">
                     <index></index>
                 </div>
@@ -42,6 +46,7 @@
     </div>
 
     <!-- Script section -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
@@ -63,8 +68,11 @@
     <script src="js/components/navigation.js"></script>
     <script src="js/components/sidebar.js"></script>
     <script src="js/components/imageUpload.js"></script>
-
+    <script src="js/components/loginRegisterForm.js"></script>
+    
     <!-- Views -->
+    <script src="js/views/login.js"></script>
+    <script src="js/views/register.js"></script>
     <script src="js/views/detailPost.js"></script>
     <script src="js/views/updatePost.js"></script>
     <script src="js/views/createPost.js"></script>
