--- a/clientbaru/index.html
+++ b/clientbaru/index.html
@@ -4,31 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="css/add.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <style type="text/css">
-    body {
-      background-color: #DADADA;
-    }
-    body > .grid {
-      height: 100%;
-    }
-    .image {
-      margin-top: -100px;
-    }
-    .column {
-      max-width: 450px;
-    }
-    .ui.footer {
-      position:fixed;
-      left:0;
-      bottom:0;
-      width:100%
-    }
-  </style>
   <title>Mini WP</title>
 </head>
 <body>
@@ -36,9 +16,7 @@
 <div id="loggedin-page">
   <!-- NAVIGATION -->
   <nav class="ui teal inverted labeled icon menu" id="navigation" v-if="status">
-  <!-- <p class="header item"><i class="pencil icon"></i>Mini WP</p> -->
-  <p class="header item"><i class="user icon"></i>Helo, {{name}}!</p>
-  <!-- <a class="item view-profile"><i class="users icon"></i>Profile</a> -->
+  <p class="header item"><i class="user icon"></i>Helo, {{user}}!</p>
   <a class="item view-articles" v-on:click="viewArticles"><i class=" newspaper outline icon" ></i>My Articles</a>
   <div class="right menu">
     <a class="item view-write" v-on:click="writeNewArticle"><i class="edit outline icon"></i>Write</a>
@@ -80,7 +58,7 @@
     </div>
   </div>
   <!-- EDIT & VIEW ONE ARTICLES -->
-  <!-- <div class="ui container" id="edit-article-view">
+  <div class="ui container" id="edit-article-view">
     one-article-view
     <div class="ui container segment">
       <form class="ui form center aligned">
@@ -93,14 +71,14 @@
         </div>
       </form>
     </div>
-  </div> -->
+  </div>
   <!-- WRITE NEW ARTICLE -->
   <div class="ui container" id="write-view" v-if="status">
     <div class="ui red message" id="newarticleerrormsg" style="display: none">
-      {{ error_message }}
+      
     </div>
     <div class="ui green message" id="newarticlesuccessmsg" style="display: none">
-      {{ success_message }}
+      
     </div>
     <div class="ui segments center aligned">
       <div class="ui segment grid right aligned" style="background-color: #DADADA">
@@ -223,15 +201,17 @@
 </div>
 
 <!-- SCRIPT -->
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  <script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<script src="javascript/vue.js"></script>
+<script>
     var quill = new Quill('#editor', {
       theme: 'snow'
     });
     var quill2 = new Quill('#editor2', {
       theme: 'snow'
     });
-  </script>
+</script>
 </body>
 </html>
