--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/solid.css" integrity="sha384-ioUrHig76ITq4aEJ67dHzTvqjsAP/7IzgwE7lgJcg2r7BRNGYSK0LwSmROzYtgzs" crossorigin="anonymous"> -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css" integrity="sha384-sri+NftO+0hcisDKgr287Y/1LVnInHJ1l+XC7+FOabmTTIK0HnE2ID+xxvJ21c5J" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css"
+        integrity="sha384-sri+NftO+0hcisDKgr287Y/1LVnInHJ1l+XC7+FOabmTTIK0HnE2ID+xxvJ21c5J" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -61,25 +62,33 @@
                 <div class="form-inline">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 </div>
+                <div class="form-inline" v-if="!token">
+                    <button class="btn bg-info btn-sm m-3 p-2">login</button>                                       
+                </div>
+                <div class="form-inline" v-if="!token">
+                    <button class="btn bg-info btn-sm m-3 p-2">register</button> 
+                </div>
+                <div class="form-inline" v-if="token">
+                    <button class="btn bg-info btn-sm m-3 p-2">logout</button> 
+                </div>
             </div>
         </nav>
 
-        <div class="container bg-primary text-center" id='blog-post'>
+        <div class="container bg-primary text-center">
             <div class="row m-3">
                 <div class="col-sm ">
                     <div class="accordion" id="accordionExample">
-                        <Posted class="card" v-for='(article, index) in articles' :article= 'article' :index='index' :key="index">
-                    <button class="btn col-sm bg-success m-3 p-2 border">
-                        add a new post
-                    </button>
+                        <Posted class="card" v-for='(article, index) in articles' :article='article' :index='index'
+                            :key="index">
+                            <button class="btn col-sm bg-success m-3 p-2 border">
+                                add a new post
+                            </button>
+                    </div>
                 </div>
             </div>
-        </div>
     </main>
-
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/main.js"></script>
-
 </body>
 
 </html>
