--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote-bs4.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote-bs4.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="css/style.css" />
     <title>Mini Wordpress</title>
   </head>
@@ -96,8 +97,8 @@
                 <div class="col-12 px-5">
                   <div class="list-group" id="list-tab" role="tablist">
                     <a class="list-group-item list-group-item-action border-0 pl-2" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home"><i class="fas fa-search"></i> Search</a>
-                    <a class="list-group-item list-group-item-action border-0 pl-2" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile"><i class="fas fa-book-open"></i> My Blogs</a>
-                    <a class="list-group-item list-group-item-action border-0 pl-2" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages"><i class="fas fa-star"></i> My Likes</a>
+                    <a @click.prevent="showMine" class="list-group-item list-group-item-action border-0 pl-2" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile"><i class="fas fa-book-open"></i> My Blogs</a>
+                    <a @click.prevent="showLikes" class="list-group-item list-group-item-action border-0 pl-2" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages"><i class="fas fa-star"></i> My Likes</a>
                     <a class="list-group-item list-group-item-action border-0 pl-2" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings"><i class="fas fa-tags"></i> Tags</a>
                     <button @click.prevent="showEditor" type="button" class="btn mt-3" style="background-color: #016087; width: 120px; font-size: 10px"><i class="fas fa-feather-alt px-2"></i> Write</button>
                   </div>
@@ -117,11 +118,13 @@
                <!--All Articles-->
                <articles v-bind:articles="articles" v-if="page == 'all'"></articles>
                <article-details  v-if="page == 'details'" v-bind:details="details"></article-details>
+               <user-articles v-if="page == 'private'" v-bind:articles="articles"></user-articles>
 
                <!-- Editor -->
-               <div class="container">
-                 <h1>Title : {{newArticle.title}}</h1>
-                   <div class="form-group">
+               <div class="container" v-if="page == 'editor'">
+                 <h1 v-if="!editMode">Title : {{newArticle.title}}</h1>
+                 <h1 v-if="editMode">Title : {{editArticle.title}}</h1>
+                   <div class="form-group" v-if="!editMode">
                        <input
                          type="text"
                          class="form-control"
@@ -130,22 +133,41 @@
                          v-model="newArticle.title"
                        />
                    </div>
+                   <div class="form-group" v-if="editMode">
+                       <input
+                         type="text"
+                         class="form-control"
+                         id="exampleInputTitle"
+                         placeholder="Input Title"
+                         v-model="editArticle.title"
+                       />
+                   </div>
                    <h1>Description : </h1>
-                   <summer-note ref="editor"></summer-note>
-                   <div class="custom-file">
+                   <summer-note v-if="!editMode" ref="editor"></summer-note>
+                   <summer-note v-if="editMode" ref="editor" v-bind:edit="editArticle" ></summer-note>
+                   <div class="custom-file mt-3">
                       <input
                         type="file"
                         class="custom-file-input"
                         id="inputGroupFile01"
                         v-on:change="getImage"
                       />
-                      <label class="custom-file-label" for="inputGroupFile01"
-                        ></label
-                      >
+                      <label class="custom-file-label" for="inputGroupFile01">{{newArticle.getImage}}</label>
+                      <span  class="badge badge-pill badge-light" v-for="(tag, index) in currentTags" :key="index" style="font-size: 8px" @click.prevent="deleteTag(tag)" >{{tag}} <i class="fas fa-times"></i></span>
+                  </div>
+                  <div class="form-group my-3" v-if="!editMode">
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="exampleInputTag"
+                        placeholder="Input Tag"
+                        v-model="newTag"
+                      />
+                      <button @click.prevent="createTag" type="button" class="btn mt-3" style="background-color: #016087; width: 120px; font-size: 10px">Add Tag</button>
                   </div>
                    <div class="col-12 px-0 d-flex justify-content-center">
                        <button @click.prevent="getValue" type="button" class="btn mt-3" style="background-color: #016087; width: 120px; font-size: 10px">Post</button>
-                       <button @click.prevent="addArticle" type="button" class="btn mt-3" style="background-color: #016087; width: 120px; font-size: 10px">Cancel</button>
+                       <button @click.prevent="showAll" type="button" class="btn mt-3" style="background-color: #016087; width: 120px; font-size: 10px">Cancel</button>
                    </div>
                </div>        
             </div>
@@ -162,6 +184,7 @@
     <script src="components/login.js"></script>
     <script src="components/articles.js"></script>
     <script src="components/details.js"></script>
+    <script src="components/user-article.js"></script>
     <script src="components/summernote.js"></script>
     <script src="js/script.js"></script>
     <script>
