--- a/client/index.html
+++ b/client/index.html
@@ -192,50 +192,13 @@
 
                     <!-- ADD BLOG SUB-PAGE -->
 
-                    <formadd v-show="page === 'blog-add-page'" class="blog-add-subpage" @addsuccess="listBlog">
-                        <!-- <form class="form-blog-add-subpage" method="POST">
-                            <div>
-                                <label for title>Title: </label><br>
-                                <input class="form-control form-control-lg" v-model="blog_title" type="text"
-                                    name="title" size="35" placeholder="Your title here.." required>
-                            </div><br>
-                            <label for editor>Content:</label>
-                            <div>
-                                <wysiwyg id="editor" v-model="text"></wysiwyg>
-                            </div>
-                            <div>
-                                <input type="text" v-model="author" placeholder="Author of this article.."
-                                    id="author-input">
-                            </div>
-                            <div>
-                                <input type="file" v-on:change="onChangeUpload" required>
-                            </div><br>
-                            <button class="btn btn-dark" v-on:click.prevent="addBlogg">Add</button>
-                        </form> -->
-                    </formadd>
+                    <formadd v-show="page === 'blog-add-page'" :page="page" class="blog-add-subpage"
+                        @addsuccess="listBlog"></formadd>
 
                     <!-- EDIT BLOG SUB-PAGE -->
 
-                    <div v-show="page === 'blog-update-page'" class="blog-update-page">
-                        <form class="form-blog-edit-subpage" method="POST">
-                            <div>
-                                <label for title>Title: </label><br>
-                                <input v-model="blog_title" type="text" name="title" id="blog_title" size="35"
-                                    placeholder="Your title here.." required>
-                            </div><br>
-                            <label for editor>Content:</label>
-                            <!-- <div id="editor2">
-                            <p></p>
-                        </div> -->
-                            <div>
-                                <wysiwyg id="editor" v-model="text"></wysiwyg>
-                            </div><br>
-                            <div>
-                                <input type="file" v-on:change="onChangeUpload" required>
-                            </div><br>
-                            <button class="btn btn-dark" type="submit" v-on:click.prevent="updateBlogg">Update</button>
-                        </form>
-                    </div>
+                    <editform v-show="page === 'blog-update-page'" class="blog-update-page" :blog_title=blog_title
+                        :text=text :id=id :createdat=createdAt @editsuccess="listBlog"></editform>
                 </div>
             </div>
 
@@ -252,6 +215,7 @@
     <!-- wysiwyg JS -->
     <script src="./wysiwyg/index.js"></script>
     <!-- my JS -->
+    <script src="./js/components/formedit.js"></script>
     <script src="./js/components/formadd.js"></script>
     <script src="./js/index.js"></script>
 </body>
