--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" type="text/css" href="./wysiwyg/style.css">
     <!-- my CSS -->
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css">
-    <!-- sweetalert2 -->
-    <!-- <link rel="stylesheet" href="sweetalert2.min.css" type="text/css"> -->
     <!-- bootstrapVue JS -->
     <script src="//unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
     <script src="//unpkg.com/vue@latest/dist/vue.min.js"></script>
@@ -28,7 +26,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!-- swal2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-    <!-- <script src="sweetalert2.min.js"></script> -->
     <!-- swal -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Google Platform Library -->
@@ -38,26 +35,20 @@
 <body>
     <div id="app">
         <!-- beforelogin -->
-        <div v-if="!isLoggedIn">
+        <div v-show="!isLoggedIn">
             <div>
-                <button class="btn btn-info btn-lg" id="login-f-btn" v-on:click="regularLogin()">Login</button>
-            </div>
-            <div class="or-login-with-google">
-                Or log in with Google
+                <button class="btn btn-outline-primary btn-lg" id="login-f-btn" v-on:click="regularLogin()">Login</button>
             </div>
             <div>
                 <div class="g-signin2" data-onsuccess="onSignIn"></div>
             </div>
-            <div class="or-signup">
-                Or sign up for free !
-            </div>
             <div>
-                <button class="btn btn-info btn-lg" id="register-f-btn" v-on:click="register()">Register</button>
+                <button class="btn btn-outline-primary btn-lg" id="register-f-btn" v-on:click="register()">Register</button>
             </div>
         </div>
 
         <!-- afterlogin -->
-        <div v-else-if="isLoggedIn">
+        <div v-if="isLoggedIn">
 
             <!-- NAVBAR -->
 
