--- a/client/index.html
+++ b/client/index.html
@@ -44,13 +44,14 @@
                     <create-post></create-post>
                 </div>
                 <div id="updatePost" v-if="page === 'updatePost'" class="container">
-                    <update-post></update-post>
+                    <update-post :initData="currentPost"></update-post>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Script section -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
