--- a/client/index.html
+++ b/client/index.html
@@ -216,7 +216,7 @@
                         <h3 class="headline mb-0">Kangaroo Valley Safari</h3>
                         <span class="grey--text">Author Name | Date Published</span>
                         <p> Lorem ipsum dolor sit amet, brute iriure accusata ne mea. Eos suavitate referrentur ad, te duo agam libris qualisque, utroque quaestio accommodare no qui. Et percipit laboramus usu, no invidunt verterem nominati mel. Dolorem ancillae an mei, ut putant invenire splendide mel, ea nec propriae adipisci. Ignota salutandi accusamus in sed, et per malis fuisset, qui id ludus appareat. </p>
-                      </di>
+                      </div>
                     </v-card-title>
             
                     <v-card-actions>
@@ -241,8 +241,8 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
   <script src="./js/vueWysiwyg.js"></script>
-  <script src="./js/navbar.js"></script>
-  <script src="./js/sidebar.js"></script>
+  <!-- <script src="./js/navbar.js"></script> -->
+  <!-- <script src="./js/sidebar.js"></script> -->
   <script src="./js/index.js"></script>
 </body>
 </html>
